--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   /* width: 100%; */
+  text-decoration: none;
 }
 
 .home {
@@ -63,9 +64,10 @@
 
 .movies-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   row-gap: 20px;
   column-gap: 10px;
+  margin-top:15px ;
 }
 
 .movie-card {
@@ -74,6 +76,57 @@
   padding-bottom: 10px;
 }
 
+.movie-card {
+  position: relative;
+  /* Make sure the whole card is zoomed in */
+  transition: transform 0.5s ease;
+  cursor: pointer;
+  overflow: hidden;
+  /* To hide overflowing parts when zoomed in */
+}
+
+.movie-card:hover {
+  transform: scale(1.05);
+  /* Scale the entire card on hover */
+}
+
+.movie-card:hover>.movie-poster {
+  transform: scale(1.1);
+  /* Optional: Keep the image zoom slightly more */
+}
+
+.movie-card:hover>.movie-info {
+  opacity: 1;
+  /* Optional: Adjust visibility of text if needed */
+}
+
+.movie-info {
+  transition: opacity 0.3s ease;
+}
+
+.movie-poster {
+  transition: transform 0.5s ease;
+  /* Smooth transition for image scaling */
+}
+
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Optional: overlay color */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.movie-card:hover>.movie-overlay {
+  opacity: 1;
+  /* Show the overlay on hover */
+}
+
+
 .movie-poster img {
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
@@ -81,14 +134,23 @@
 }
 
 .movie-info {
-  margin: 10px;
+  margin: 20px;
 }
 
-.fav{
+.fav {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(187, 87, 87);
+  height: 40px;
+  margin-top: 40px;
 }
 
 @media (max-width:500px) {
@@ -102,5 +164,9 @@
 
   .search {
     width: 290px;
+  }
+
+  .movies-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 }
